# fastapi-apps

./: .pre-commit-config.yaml  README.md  cspell-tool.txt
.github/workflows/: test.yml
.moon/: tasks.yml
apps/app1/: Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  requirements.txt
apps/app1/app/: main.py  test_main.py
apps/app1/app/routers/: items.py  users.py
apps/app1/app/tests/: test_items.py  test_main.py  test_users.py
apps/app1/tests/: test_main.py
apps/app2/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
apps/app2/tests/: test_main.py
apps/client/: Makefile  README.md  bun.lockb  index.ts  package.json
