[tool.poetry]
name = "fastapi-app-demo"
version = "0.1.0"
description = ""
authors = ["Huynh Duc Dung <dunghd.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
fastapi = "0.115.3"
uvicorn = "0.32.0"


[tool.poetry.group.test.dependencies]
httpx = "0.27.2"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
